<resources>
    <string name="app_name">GmGuide</string>
    <string name="welcome"><![CDATA[Welcome to the D&D world]]></string>
    <string name="Home"><![CDATA[GM Guide Home]]></string>
    <string name="Map_button">Click to go to map generation</string>
    <string name="start_button">Start your Adventure!</string>
    <string name="generate_map">Generate Map</string>
    <string name="get">Get map</string>
    <string name="go_home">Home</string>
    <string name="save_map">Save</string>
    <string name="welcome_adventure">Welcome to chapter one.</string>
    <string name="begin">Your adventure begins with _________ (Tap to select options in blank spaces)</string>
    <string name="heroes_in_party">heroes in your party</string>
    <string name="partyMembers">Your adventure begins, the adventurers in your party are \u0020</string>
    <string name="ch2SelectedTown">The adventuring party makes their way to the town of \u0020</string>
    <string name="ch2SelectedSideQuest">Your party learns of a quest from the town to \u0020</string>
    <string name="nextChapter">Next Chapter</string>
    <string name="ch2">Chapter Two</string>
    <string name="ch2Start">Your adventure takes its next step, your party arrives in the town of ____ (Tap to select town)</string>
    <string name="ch2town2">Valisten</string>
    <string name="ch2town1">Listalum</string>
    <string name="ch2town3">Draker</string>
    <string name="questObjective">Your adventuring parties main quest objective is _____</string>
    <string name="selectedQuest">Your parties main objective in this campaign is to \u0020</string>
    <string name="quest3">Find and explore the mythical labyrinth unknown to all and guarded by a great warlock, no-one has returned alive.</string>
    <string name="quest2">Retrieve the artifact of power from an evil wizard who stole it.</string>
    <string name="quest1">Defeat the Dark Lord terrorising the land and bring back the light.</string>
    <string name="party1">One</string>
    <string name="party2">Two</string>
    <string name="party3">Three</string>
    <string name="party4">Four</string>
    <string name="chapterOneTown">Your adventuring party begins in the town of _____</string>
    <string name="ch1town1">Rivera</string>
    <string name="ch1town2">Valstak</string>
    <string name="ch1town3">Leyvin</string>
    <string name="ch1SelectedTown">Your adventuring party begins their journey in the town of \u0020</string>
    <string name="genTownButton">Generate town</string>
    <string name="ch1Dungeon">Your first dungeon location is the _____</string>
    <string name="ch1SelectedDungeon">Your first dungeon location is the \u0020</string>
    <string name="generateDun">Generate Dungeon</string>
    <string name="ch1Enemies">The enemies in your first dungeon are _____</string>
    <string name="ch1SelectedEnemies">The enemies in your first dungeon are \u0020</string>
    <string name="chapter2quest">While on this quest the party will learn of someone who knows information about their objective, this person is _____</string>
    <string name="chapter2selectedquesthint">While on this quest the party will learn of someone who knows information about their objective, this person is \u0020</string>
    <string name="chapterTwoObjectiveRumor">However, this person has been missing from the town for several days, it is rumoured that they we\'re kidnapped and are being held by ____</string>
    <string name="chapterTwoSelectedObjectiveRumor">However, this person has been missing from the town for several days, it is rumoured that they we\'re kidnapped and are being held by \u0020</string>
    <string name="chapterTwoToChapterThreeReason">Upon rescuing their informant, they would give the party information that guides them to ____</string>
    <string name="chapterTwoSelectedEnd">Upon rescuing their informant, they would give the party information that guides them to \u0020</string>
    <string name="chapter2Objective">Your party learns of a quest from the town to ____</string>
    <string name="goblin">Goblins are strange humanoid creatures that are said to of been born from the depths of the abyss itself, often traveling in packs or warbands, they are not to be underestimated for their resourcefulness, even by the strongest of adventurers.</string>
    <string name="kobolds">Kobolds are small scaly, reptilian folk that usually hunt in packs, they are cold blooded unlike dragonfolk and are usually under the service of evil dragons, worshipping them with crude statues. </string>
    <string name="bandits">Bandits travel in gangs are usually led by bandit leaders or bandit veterans, typically bandit gangs roam the wilderness and outskirts of towns, looking for unsuspecting victims to rough up for spare coin. </string>
    <string name="wolves">Wolves are rarely seen alone, these pack predators are constantly found roaming the wilderness and occasionally can be found in caves. Many adventurer\'s have fallen to wolf ambushes. </string>
    <string name="imp">Imps are known as demon tricksters, but more often than not are known as the lackeys of warlocks and wizards or other greater demon. Imps are the rabble that while aren\'t very intimidating on their own, can be quite a hastle with their shape changing magic.</string>
    <string name="skeletons">Skeletons are said to be vengeful spirits that returned to their bodies long after their passing to enact vengeance on those who have wronged them. They are also summoned as lesser minions by necromancers and wizards to do their bidding, often against their will.</string>
    <string name="zombies">Zombies are often thralls raised from the dead by necromancers in order to carry out their bidding as meatshields and minions, often set upon innocent towns to bring back more bodies to make more zombies.</string>
    <string name="darkMage">It is said that to every light there is a shadow, evil mages are no exception to good mages, often skulking in the shadows conducting vile rituals to cause harm to the innocent.</string>
    <string name="demonLord">The Demon lord is a cruel and malevolent being, tasked with ruling over the demons of the underworld and the realm beyond the mortal plane, it’s his fault that demons can slip through the cracks in reality and break through so easily, while a blessing to warlocks and those who service evil, there will be no end to the endless flow of demons unless the Demon Lord is stopped.</string>
    <string name="assassin">Trained in the use of poison, assassins are remorseless killers who work for nobles, guildmasters, sovereigns, and anyone else who can afford them, including demons.</string>
    <string name="evilKnight">Knights are normally warriors who pledge service to rulers, religious orders, and noble causes. An Evil knight however is a knight that has abandoned his king and order to pick up the blade of evil, bowing to a demonic or evil master, they pillage and destroy to their hearts content until someone can stop them.</string>
    <string name="goblinTrait">Traits: Nimble action: The goblin can hide or disengage as a bonus action every turn.</string>
    <string name="koboldTrait">Traits: Pack Tactics: The kobolds have advantage on an Attack roll if at least one of the kobold\'s allies is within 5 ft of the creature.</string>
    <string name="banditTrait">Traits: None</string>
    <string name="wolfTrait">Traits: Keen hearing and smell: Wolves have advantage on perception checks that require smelling or hearing.\nPack tactics: The wolf has advantage on any attack roll if atleast one of the wolves allies is within 5ft.  </string>
    <string name="returnMain">Return To Main Menu</string>
    <string name="upload_map">Upload</string>
    <string name="download_map">Download last uploaded map</string>
    <string name="monsterCodexButton">Go to monster codex</string>
    <string name="deleteMap">Delete Map</string>
    <string name="prevChapter">Prev Chapter</string>
    <string name="newCampaign">Clear</string>
    <string name="ch3">Chapter Three</string>
    <string name="ch3StartTown">After traveling for a long while from the previous village, the party would find themselves in the new town of ____</string>
    <string name="ch3TownDisaster">After arriving in the town they would find that something tragic has befallen it, the town has been ____</string>
    <string name="ch3Informant">By sheer luck the party would find someone to give them information about the way to solve this issue, this person is a ____</string>
    <string name="ch3betrayl">Upon bringing the requested item to the informant it would be revealed that he\'s actually ____</string>
    <string name="ch3End">After a short battle with the villain, he would of managed to escape in the direction of ____</string>
    <string name="clear">Clear</string>
    <string name="ch4">Chapter Four</string>
    <string name="mapGen">Map Generation</string>
    <string name="ch5Start">(At this point in the campaign it is not 100% necessary to follow the text, the labyrinth is huge, so please explore at your leisure if you wish and make up as you go.) The party would arrive at their final destination, a long sprawling dungeon of great depth, it would be hard to see ahead in the darkness, but there would be three directions to go, they are ____</string>
    <string name="mapSelect">Map Selection</string>
    <string name="townMapGen">Town Map Generation</string>
    <string name="worldMapGen">World Map Generation</string>
    <string name="labyrinthMapGen">Labyrinth Map Generation</string>
    <string name="ch5Encounter">Upon taking the first turn the party would be suddenly ambushed from both sides by ____</string>
    <string name="ch5Turn">After successfully defending themselves against hte ambush, the party would find that something has changed within the dungeon, that change is ____</string>
    <string name="ch5FinalBoss">(Only start this once your satisfied with exploration) As the party emerges from the next room they would find that their target is awaiting them in the next room! That target being ____</string>
    <string name="ch5End">As the foul adversary is defeated once and for all, and the treasure claimed, the party can finally return home and retire for now, the treasure being split up and the party would ___</string>
    <string name="ch5endthanks">Thank you so much for using my application for this campaign, I hope you enjoyed it!</string>
    <string name="diceString">Press a button to roll the dice!</string>
    <string name="roll_d20">D20</string>
    <string name="roll_d10">D10</string>
    <string name="d4Roll">D4</string>
    <string name="d8Roll">D8</string>
    <string name="d12Roll">D12</string>
    <string name="d100Roll">D100</string>
    <string name="rollD6">D6</string>
</resources>