<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/parchment"
    tools:context="com.example.alexwong.dungeonanddragonhelper.AdventureActivity">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_adventure"
            android:textColor="@color/blackBack"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/beginningtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/begin"
            android:textSize="15sp"
            android:textColor="@color/blackBack" />

        <TextView
            android:id="@+id/chapterOneQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackBack"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/questObjective" />

        <TextView
            android:id="@+id/chapterOneTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackBack"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/chapterOneTown"
            />

        <Button
            android:id="@+id/townMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/genTownButton"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/oneDungeon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackBack"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/ch1Dungeon" />

        <Button
            android:id="@+id/genDungeonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/generateDun"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/chapterOneEnemies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackBack"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/ch1Enemies"/>

        <Button
            android:id="@+id/monCodexButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/monsterCodexButton"
            android:visibility="invisible"
            android:onClick="goToMonsterDetection"
            />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_home"
                android:id="@+id/home_button"
                android:onClick="returnHome"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newCampaign"
                android:onClick="newCampaign"
                android:id="@+id/prevChapter" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextChapter"
                android:id="@+id/nextChapter"
                android:onClick="goChapterTwo"/>


            </LinearLayout>
    </LinearLayout>
</ScrollView>



</RelativeLayout>
