<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/parchment"
    tools:context="com.example.alexwong.dungeonanddragonhelper.ChapterFiveActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ch4"
                android:textColor="@color/blackBack"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/chapterFiveStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/ch5Start"
                android:textColor="@color/blackBack" />

            <Button
                android:id="@+id/mapButtonCh5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mapGen"
                android:onClick="goToMap"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/chapterFiveEncounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBack"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/ch5Encounter"
                />

            <Button
                android:id="@+id/encounterButtonCh5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/monsterCodexButton"
                android:onClick="goToMonDetection"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/chapterFiveTurn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBack"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/ch5Turn"
                />

            <TextView
                android:id="@+id/chapterFiveFinalBoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBack"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/ch5FinalBoss"
                />

            <TextView
                android:id="@+id/chapterFiveEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBack"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/ch5End"
                />

            <TextView
                android:id="@+id/chapterFiveThanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackBack"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/ch5endthanks"
                android:visibility="invisible"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goBack"
                    android:text="@string/prevChapter" />

                <Button
                    android:id="@+id/pastChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="newCampaign"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/nextChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="returnHome"
                    android:text="@string/Home" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>