<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/parchment"
    tools:context="com.example.alexwong.dungeonanddragonhelper.MapSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mapSelect"
            android:textColor="@color/blackBack"
            android:textSize="20sp"
            android:gravity="top|center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/worldMap"
            android:layout_marginTop="20dp"
            android:onClick="goToMap"
            android:text="@string/worldMapGen"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/townMap"
            android:layout_marginTop="20dp"
            android:onClick="goTownMap"
            android:text="@string/townMapGen"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/start_adventure"
            android:onClick="goLabyrinthMap"
            android:layout_marginTop="20dp"
            android:text="@string/labyrinthMapGen"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_home"
            android:id="@+id/home_button"
            android:layout_gravity="center_horizontal"
            android:onClick="goHome"
             />


    </LinearLayout>








</android.support.constraint.ConstraintLayout>
